added rendering of canvas

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <!-- data-main attribute tells require.js to load
              scripts/main.js after require.js loads. -->
         <script data-main="js/CanRender" src="js/require.js"></script>
+        <link rel="stylesheet" type="text/css" href="CanRender.css">
     </head>
     <body>
         <h1>CanRender</h1>
+        <div id="masterContainer"></div>
     </body>
 </html>
